Работа с модалкой (промежуточный вариант)

--- a/portfolio.html
+++ b/portfolio.html
@@ -228,9 +228,7 @@
       <div class="container">
         <div class="footer-main">
           <div>
-            <a href="./index.html" class="logo"
-              ><span class="logo-accent">Web</span> Studio</a
-            >
+            <a href="./index.html" class="logo"><span class="logo-accent">Web</span> Studio</a>
             <ul class="list">
               <li>
                 <span class="adress">г. Киев, пр-т Леси Украинки, 26</span>
@@ -239,9 +237,7 @@
                 <a href="mailto:info@devstudio" class="email">info@devstudio</a>
               </li>
               <li>
-                <a href="tel:+380961111111" class="telefone"
-                  >+38 096 111 11 11</a
-                >
+                <a href="tel:+380961111111" class="telefone">+38 096 111 11 11</a>
               </li>
             </ul>
           </div>
@@ -249,29 +245,29 @@
             <span class="footer-invitation">ПРИСОЕДИНЯЙТЕСЬ</span>
             <ul class="list links">
               <li class="fone-links">
-                <a href="" aria-label="Ссылка на Instagram">
-                  <svg class="icon-links">
+                <a href="" aria-label="Ссылка на Instagram" class="icon-links">
+                  <svg width="20" height="20">
                     <use href="./img/symbol-defs.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="fone-links">
-                <a href="" aria-label="Ссылка на Twitter">
-                  <svg class="icon-links">
+                <a href="" aria-label="Ссылка на Twitter" class="icon-links">
+                  <svg width="20" height="20">
                     <use href="./img/symbol-defs.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="fone-links">
-                <a href="" aria-label="Ссылка на Facebook">
-                  <svg class="icon-links">
+                <a href="" aria-label="Ссылка на Facebook" class="icon-links">
+                  <svg width="20" height="20">
                     <use href="./img/symbol-defs.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="fone-links">
-                <a href="" aria-label="Ссылка на Linkedin">
-                  <svg class="icon-links">
+                <a href="" aria-label="Ссылка на Linkedin" class="icon-links">
+                  <svg width="20" height="20">
                     <use href="./img/symbol-defs.svg#icon-linkedin"></use>
                   </svg>
                 </a>
@@ -279,13 +275,14 @@
             </ul>
           </div>
           <div>
-           <span class="footer-invitation">ПОДПИШИТЕСЬ НА РАССЫЛКУ</span>
+            <span class="footer-invitation">ПОДПИШИТЕСЬ НА РАССЫЛКУ</span>
             <ul class="sign list">
               <li>
                 <form class="form js-speaker-form">
                   <div class="form-field">
-                    <label for="email"><!--<span class="footer-invitation">ПОДПИШИТЕСЬ НА РАССЫЛКУ</span>--></label>
-                    <input type="email" name="email" id="email" placeholder="Email"/>
+                    <label for="email">
+                      <!--<span class="footer-invitation">ПОДПИШИТЕСЬ НА РАССЫЛКУ</span>--></label>
+                    <input type="email" name="email" id="email" placeholder="Email" />
                   </div>
                 </form>
               </li>
