--- a/index.html
+++ b/index.html
@@ -79,32 +79,32 @@
           <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
 
           <div class="modal-form">
-        <label for="user-name" class="form-label">Имя</label>
-        <svg class="icon-modal" width="18" height="18">
-          <!--<use href="./images/sprite.svg#icon-person"></use>-->
-        </svg>
-        <input type="text" name="user-name" id="user-name" class="modal-input"/>
+          <input type="text" name="user-name" id="user-name" placeholder=" " class="modal-input"/>
+          <label for="user-name" class="form-label">Имя</label>
+          <svg class="icon-modal" width="18" height="18">
+           <!--<use href="./images/sprite.svg#icon-person"></use>-->
+          </svg> 
           </div>
 
           <div class="modal-form">
-        <label for="user-fone" class="form-label">Телефон</label>
-        <svg class="icon-modal" width="18" height="18">
+         <input type="tel" name="user-fone" id="user-fone" placeholder=" " class="modal-input"/>
+         <label for="user-fone" class="form-label">Телефон</label>
+         <svg class="icon-modal" width="18" height="18">
           <!--<use href="./images/sprite.svg#icon-person"></use>-->
-        </svg>
-        <input type="tel" name="user-fone" id="user-fone" class="modal-input"/>
-          </div>
+         </svg> 
+         </div>
 
           <div class="modal-form">
-        <label for="user-email" class="form-label">Почта</label>
-        <svg class="icon-modal" width="18" height="18">
+         <input type="email" name="user-email" id="user-email" placeholder=" " class="modal-input">
+         <label for="user-email" class="form-label">Почта</label>
+         <svg class="icon-modal" width="18" height="18">
           <!--<use href="./images/sprite.svg#icon-person"></use>-->
-        </svg>
-        <input type="email" name="user-email" id="user-email" class="modal-input">
-          </div>
+         </svg> 
+         </div>
 
           <div class="modal-textarea">
-        <label for="user-text" class="textarea-label">Комментарий</label>
-        <textarea name="user-text" id="user-text"></textarea>
+         <textarea name="user-text" id="user-text" class="textarea-text" placeholder=" "></textarea>
+         <label for="user-text" class="textarea-label">Комментарий</label> 
           </div>
 
           <div class="agreement">
